Fix transactional listing issue