@@ -8,13 +8,13 @@ import java.util.Map;
 
 import org.roda.core.data.common.RodaConstants;
 import org.roda.core.data.exceptions.RODAException;
-import org.roda.core.data.v2.ip.StoragePath;
 import org.roda.core.entity.transaction.OperationState;
 import org.roda.core.entity.transaction.OperationType;
 import org.roda.core.entity.transaction.TransactionalStoragePathOperationLog;
 import org.roda.core.storage.DefaultStoragePath;
 import org.roda.core.transaction.ConsolidatedOperation;
 import org.roda.core.transaction.TransactionLogConsolidator;
+import org.roda.core.transaction.StoragePathVersion;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.test.context.testng.AbstractTestNGSpringContextTests;
@@ -40,7 +40,7 @@ public class TransactionLogConsolidatorTest extends AbstractTestNGSpringContextT
       buildLog("x/y/z.txt", OperationType.CREATE, OperationState.SUCCESS, null),
       buildLog("x/y/z.txt", OperationType.DELETE, OperationState.SUCCESS, null));
 
-    Map<StoragePath, List<ConsolidatedOperation>> result = TransactionLogConsolidator.consolidateLogs(logs);
+    Map<StoragePathVersion, List<ConsolidatedOperation>> result = TransactionLogConsolidator.consolidateLogs(logs);
     assertTrue(result.values().iterator().next().isEmpty());
   }
 
@@ -51,14 +51,15 @@ public class TransactionLogConsolidatorTest extends AbstractTestNGSpringContextT
       buildLog("a/b/c.txt", OperationType.UPDATE, OperationState.SUCCESS, null),
       buildLog("a/b/c.txt", OperationType.DELETE, OperationState.SUCCESS, null));
 
-    Map<StoragePath, List<ConsolidatedOperation>> storagePathListMap = TransactionLogConsolidator.consolidateLogs(logs);
+    Map<StoragePathVersion, List<ConsolidatedOperation>> storagePathListMap = TransactionLogConsolidator.consolidateLogs(logs);
 
-    for (Map.Entry<StoragePath, List<ConsolidatedOperation>> storagePathListEntry : storagePathListMap.entrySet()) {
+    for (Map.Entry<StoragePathVersion, List<ConsolidatedOperation>> storagePathListEntry : storagePathListMap
+      .entrySet()) {
       System.out
-        .println("Storage Path: " + storagePathListEntry.getKey() + ", Operations: " + storagePathListEntry.getValue());
+              .println("Storage Path: " + storagePathListEntry.getKey() + ", Operations: " + storagePathListEntry.getValue());
       // operations should be empty
       assertTrue(storagePathListEntry.getValue().isEmpty(),
-        "Consolidated operations should be empty for path: " + storagePathListEntry.getKey());
+              "Consolidated operations should be empty for path: " + storagePathListEntry.getKey());
     }
   }
 
@@ -69,13 +70,13 @@ public class TransactionLogConsolidatorTest extends AbstractTestNGSpringContextT
       buildLog("a/b/file.txt", OperationType.UPDATE, OperationState.SUCCESS, null),
       buildLog("a/b/file.txt", OperationType.UPDATE, OperationState.SUCCESS, null));
 
-    Map<StoragePath, List<ConsolidatedOperation>> result = TransactionLogConsolidator.consolidateLogs(logs);
+    Map<StoragePathVersion, List<ConsolidatedOperation>> result = TransactionLogConsolidator.consolidateLogs(logs);
 
     assertEquals(1, result.size());
     List<ConsolidatedOperation> operations = result.values().iterator().next();
 
     assertEquals(1, operations.size());
-    assertEquals(OperationType.UPDATE, operations.get(0).operationType());
+    assertEquals(OperationType.UPDATE, operations.getFirst().operationType());
   }
 
   @Test
@@ -84,11 +85,11 @@ public class TransactionLogConsolidatorTest extends AbstractTestNGSpringContextT
       buildLog("a/b/file.txt", OperationType.CREATE, OperationState.SUCCESS, null),
       buildLog("a/b/file.txt", OperationType.UPDATE, OperationState.SUCCESS, null));
 
-    Map<StoragePath, List<ConsolidatedOperation>> result = TransactionLogConsolidator.consolidateLogs(logs);
+    Map<StoragePathVersion, List<ConsolidatedOperation>> result = TransactionLogConsolidator.consolidateLogs(logs);
 
     List<ConsolidatedOperation> operations = result.values().iterator().next();
     assertEquals(1, operations.size());
-    assertEquals(OperationType.CREATE, operations.get(0).operationType());
+    assertEquals(OperationType.CREATE, operations.getFirst().operationType());
   }
 
   @Test
@@ -98,11 +99,22 @@ public class TransactionLogConsolidatorTest extends AbstractTestNGSpringContextT
       buildLog("a/b/c/d", OperationType.CREATE, OperationState.SUCCESS, null),
       buildLog("a/b", OperationType.DELETE, OperationState.SUCCESS, null));
 
-    Map<StoragePath, List<ConsolidatedOperation>> result = TransactionLogConsolidator.consolidateLogs(logs);
+    Map<StoragePathVersion, List<ConsolidatedOperation>> result = TransactionLogConsolidator.consolidateLogs(logs);
 
     assertEquals(1, result.size());
-    StoragePath onlyPath = result.keySet().iterator().next();
-    assertEquals(DefaultStoragePath.parse(List.of("a", "b")), onlyPath);
+    StoragePathVersion onlyPath = result.keySet().iterator().next();
+    assertEquals(DefaultStoragePath.parse(List.of("a", "b")), onlyPath.storagePath());
+  }
+
+  @Test
+  public void testDeleteRemovesChildOperationsWithVersionFromConsolidation() throws RODAException {
+    List<TransactionalStoragePathOperationLog> logs = List.of(
+            buildLog("a/b", OperationType.CREATE, OperationState.SUCCESS, "1.0"),
+            buildLog("a/b", OperationType.DELETE, OperationState.SUCCESS, null));
+
+    Map<StoragePathVersion, List<ConsolidatedOperation>> result = TransactionLogConsolidator.consolidateLogs(logs);
+
+    assertEquals(2, result.size());
   }
 
   @Test
@@ -112,25 +124,40 @@ public class TransactionLogConsolidatorTest extends AbstractTestNGSpringContextT
       buildLog("a/b/c", OperationType.UPDATE, OperationState.SUCCESS, null),
       buildLog("a/b/c/d", OperationType.CREATE, OperationState.SUCCESS, null));
 
-    Map<StoragePath, List<ConsolidatedOperation>> result = TransactionLogConsolidator.consolidateLogs(logs);
+    Map<StoragePathVersion, List<ConsolidatedOperation>> result = TransactionLogConsolidator.consolidateLogs(logs);
 
     assertEquals(3, result.size());
 
-    assertTrue(result.containsKey(DefaultStoragePath.parse(List.of("a", "b"))));
-    assertTrue(result.containsKey(DefaultStoragePath.parse(List.of("a", "b", "c"))));
-    assertTrue(result.containsKey(DefaultStoragePath.parse(List.of("a", "b", "c", "d"))));
+    StoragePathVersion keyAB = new StoragePathVersion(DefaultStoragePath.parse(List.of("a", "b")), null);
+    StoragePathVersion keyABC = new StoragePathVersion(DefaultStoragePath.parse(List.of("a", "b", "c")), null);
+    StoragePathVersion keyABCD = new StoragePathVersion(DefaultStoragePath.parse(List.of("a", "b", "c", "d")), null);
 
-    List<ConsolidatedOperation> abOps = result.get(DefaultStoragePath.parse(List.of("a", "b")));
+    assertTrue(result.containsKey(keyAB));
+    assertTrue(result.containsKey(keyABC));
+    assertTrue(result.containsKey(keyABCD));
+
+    List<ConsolidatedOperation> abOps = result.get(keyAB);
     assertEquals(1, abOps.size());
     assertEquals(OperationType.DELETE, abOps.getFirst().operationType());
 
-    List<ConsolidatedOperation> abcOps = result.get(DefaultStoragePath.parse(List.of("a", "b", "c")));
+    List<ConsolidatedOperation> abcOps = result.get(keyABC);
     assertEquals(1, abcOps.size());
     assertEquals(OperationType.UPDATE, abcOps.getFirst().operationType());
 
-    List<ConsolidatedOperation> abcdOps = result.get(DefaultStoragePath.parse(List.of("a", "b", "c", "d")));
+    List<ConsolidatedOperation> abcdOps = result.get(keyABCD);
     assertEquals(1, abcdOps.size());
     assertEquals(OperationType.CREATE, abcdOps.getFirst().operationType());
+  }
+
+  @Test
+  public void testMoveOperationShouldHaveCreateAndDeleteOperationsAfterConsolidation() throws RODAException {
+    List<TransactionalStoragePathOperationLog> logs = List.of(
+      buildLog("a/b/c/d.txt", OperationType.CREATE, OperationState.SUCCESS, null),
+      buildLog("a/b/d.txt", OperationType.DELETE, OperationState.SUCCESS, null));
+
+    Map<StoragePathVersion, List<ConsolidatedOperation>> result = TransactionLogConsolidator.consolidateLogs(logs);
+
+    assertEquals(2, result.size());
   }
 
 }
